[gd_scene load_steps=7 format=3 uid="uid://cfeygiorcdosn"]

[ext_resource type="Script" uid="uid://bnsujvvaddf03" path="res://addons/template_setup/setup_window.gd" id="1_w2l12"]
[ext_resource type="PackedScene" uid="uid://dxgob3el2dixl" path="res://addons/template_setup/renderers/2d.tscn" id="2_yksn2"]
[ext_resource type="PackedScene" uid="uid://cujra2s7hryxm" path="res://addons/template_setup/renderers/3d.tscn" id="3_sc67k"]
[ext_resource type="PackedScene" uid="uid://n36s7yri6isw" path="res://addons/template_setup/renderers/ui_control.tscn" id="4_3tlx6"]
[ext_resource type="Script" uid="uid://dpcgbqpe1h5ll" path="res://addons/template_setup/components/preset_selector.gd" id="5_3tlx6"]

[sub_resource type="GDScript" id="GDScript_vs7ft"]
script/source = "@tool
extends ColorRect


func _ready() -> void:
	color = EditorInterface.get_base_control().get_theme_color(&\"base_color\", &\"Editor\")
"

[node name="SetupWindow" type="Window"]
oversampling_override = 1.0
title = "Setup Template"
initial_position = 4
size = Vector2i(800, 500)
transient = true
transient_to_focused = true
exclusive = true
minimize_disabled = true
min_size = Vector2i(300, 200)
script = ExtResource("1_w2l12")

[node name="FullWindow" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="FullWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.21, 0.24, 0.29, 1)
script = SubResource("GDScript_vs7ft")

[node name="Contents" type="MarginContainer" parent="FullWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Renderer" type="VBoxContainer" parent="FullWindow/Contents"]
layout_mode = 2

[node name="Welcome" type="Label" parent="FullWindow/Contents/Renderer"]
layout_mode = 2
text = "Welcome to Boop's Godot template!

Enable presets and select primary:"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Renderers" type="HBoxContainer" parent="FullWindow/Contents/Renderer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="2D" parent="FullWindow/Contents/Renderer/Renderers" instance=ExtResource("2_yksn2")]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="FullWindow/Contents/Renderer/Renderers"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="3D" parent="FullWindow/Contents/Renderer/Renderers" instance=ExtResource("3_sc67k")]
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="FullWindow/Contents/Renderer/Renderers"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="UIControl" parent="FullWindow/Contents/Renderer/Renderers" instance=ExtResource("4_3tlx6")]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="FullWindow/Contents/Renderer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullWindow/Contents/Renderer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PresetSelector" type="CheckBox" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Preset name here"
script = ExtResource("5_3tlx6")
metadata/_custom_type_script = "uid://dpcgbqpe1h5ll"

[node name="2D" type="FoldableContainer" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer"]
layout_mode = 2
folded = true
title = "2D"

[node name="VBoxContainer" type="VBoxContainer" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D"]
visible = false
layout_mode = 2

[node name="FreeMovement" type="Label" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D/VBoxContainer"]
layout_mode = 2
text = "Free Movement"

[node name="IsometricFree" type="CheckBox" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D/VBoxContainer"]
layout_mode = 2
text = "Preset name here"
script = ExtResource("5_3tlx6")

[node name="SetPrimary" type="Button" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D/VBoxContainer/IsometricFree"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Set primary"

[node name="SideOn" type="CheckBox" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D/VBoxContainer"]
layout_mode = 2
text = "Side-on"

[node name="SetPrimary" type="Button" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D/VBoxContainer/SideOn"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Set primary"

[node name="TopDownFree" type="CheckBox" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D/VBoxContainer"]
layout_mode = 2
text = "Top-down free"

[node name="SetPrimary" type="Button" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D/VBoxContainer/TopDownFree"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Set primary"

[node name="GridMovement" type="Label" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D/VBoxContainer"]
layout_mode = 2
text = "Grid-Limited Movement"

[node name="IsometricGrid" type="CheckBox" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D/VBoxContainer"]
layout_mode = 2
text = "Isometric grid"

[node name="SetPrimary" type="Button" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D/VBoxContainer/IsometricGrid"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Set primary"

[node name="TopDownGrid" type="CheckBox" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D/VBoxContainer"]
layout_mode = 2
text = "Top-down grid"

[node name="SetPrimary" type="Button" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D/VBoxContainer/TopDownGrid"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Set primary"

[node name="3D" type="FoldableContainer" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer"]
layout_mode = 2
folded = true
title = "3D"

[node name="VBoxContainer" type="VBoxContainer" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D"]
visible = false
layout_mode = 2

[node name="FreeMovement" type="Label" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D/VBoxContainer"]
layout_mode = 2
text = "Free Movement"

[node name="FirstPerson" type="CheckBox" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D/VBoxContainer"]
layout_mode = 2
text = "First-person"

[node name="SetPrimary" type="Button" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D/VBoxContainer/FirstPerson"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Set primary"

[node name="IsometricFree" type="CheckBox" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D/VBoxContainer"]
layout_mode = 2
text = "Isometric free"

[node name="SetPrimary" type="Button" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D/VBoxContainer/IsometricFree"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Set primary"

[node name="SideOn" type="CheckBox" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D/VBoxContainer"]
layout_mode = 2
text = "Side-on"

[node name="SetPrimary" type="Button" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D/VBoxContainer/SideOn"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Set primary"

[node name="ThirdPerson" type="CheckBox" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D/VBoxContainer"]
layout_mode = 2
text = "Third-person"

[node name="SetPrimary" type="Button" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D/VBoxContainer/ThirdPerson"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Set primary"

[node name="TopDownFree" type="CheckBox" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D/VBoxContainer"]
layout_mode = 2
text = "Top-down free"

[node name="SetPrimary" type="Button" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D/VBoxContainer/TopDownFree"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Set primary"

[node name="GridMovement" type="Label" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D/VBoxContainer"]
layout_mode = 2
text = "Grid-Limited Movement"

[node name="IsometricGrid" type="CheckBox" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D/VBoxContainer"]
layout_mode = 2
text = "Isometric grid"

[node name="SetPrimary" type="Button" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D/VBoxContainer/IsometricGrid"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Set primary"

[node name="TopDownGrid" type="CheckBox" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D/VBoxContainer"]
layout_mode = 2
text = "Top-down grid"

[node name="SetPrimary" type="Button" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/3D/VBoxContainer/TopDownGrid"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Set primary"

[node name="UI" type="FoldableContainer" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer"]
layout_mode = 2
folded = true
title = "UI"

[node name="VBoxContainer" type="VBoxContainer" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/UI"]
visible = false
layout_mode = 2

[node name="Empty" type="CheckBox" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/UI/VBoxContainer"]
layout_mode = 2
text = "Empty (UI games are so different it's hard to make presets)"

[node name="SetPrimary" type="Button" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/UI/VBoxContainer/Empty"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Set primary"

[node name="Drag" type="CheckBox" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/UI/VBoxContainer"]
layout_mode = 2
text = "Drag screen and elements around"

[node name="SetPrimary" type="Button" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/UI/VBoxContainer/Drag"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
text = "Set primary"

[node name="PresetSelector2" type="CheckBox" parent="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Preset name here"
script = ExtResource("5_3tlx6")
metadata/_custom_type_script = "uid://dpcgbqpe1h5ll"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="toggled" from="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D/VBoxContainer/IsometricFree" to="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D/VBoxContainer/IsometricFree" method="_on_toggled"]
[connection signal="pressed" from="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D/VBoxContainer/IsometricFree/SetPrimary" to="FullWindow/Contents/Renderer/ScrollContainer/VBoxContainer/2D/VBoxContainer/IsometricFree" method="_on_set_primary_pressed"]
